# VulVATAR

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  dev.ps1  handover.md  handover_4.md
docs/: application-design.md  architecture.md  calibration-ux.md  data-model.md  editor-cloth-authoring.md  gpu-runtime-roadmap.md  mf-virtual-camera-handover.md  mf-virtual-camera.md  model-library.md  mtoon-compatibility.md  mtoon-test-matrix.md  onnx-tracking-pipeline.md  output-interop.md  pose-provider-benchmark.md  profiling.md  project-persistence.md  ray-ik-depth-solve.md  renderer-api-contract.md  renderer-implementation-brief.md  renderer-implementation-checklist.md  renderer-module-design.md  rendering-materials.md  shader-implementation-notes.md  threading-model.md  thumb-tracking-investigation.md  tracking-retargeting.md  vulkano-renderer-design.md
installer/: vulvatar.iss
locales/: en.yml  ja.yml  ko.yml  zh.yml
models/: viseme_nn.onnx.data
plan/: T01-render-thread.md  T02-gpu-handoff.md  T03-virtual-camera-sink.md  T04-cloth-authoring-ui.md  T05-depth-only-pipeline.md  T06-mtoon-extended.md  T07-cloth-solver-verify.md  T08-rapier-world-physics.md  T09-crash-recovery.md  T10-future-extensions.md  T11-gui-pipeline-state-sync.md  T12-post-t10-polish.md  TODO.md  architecture-pipeline-gui-critical-review.md  body-twist-yaw-investigation.md  compute-prepass-migration.md  gpu-cloth-solver-compute-migration.md  gpu-runtime-roadmap-tasks.md  handover-implementation-review.md  handover.md  onnx-model-requirements.md  output-sink-integration-tests.md  pose-depth-anomaly-report.md  runtime-gpu-budget.md  sota-algorithm-upgrades.md  win32-sink-gpu-token-consumption.md
scripts/: download_vitpose_h.py  train_viseme_model.py
src/: dshow_dll.rs  frame_handoff.rs  gpu_coordination.rs  i18n.rs  lib.rs  main.rs  math_utils.rs  persistence.rs  single_instance.rs
src/app/: avatar_library.rs  bake_cache.rs  folder_watcher.rs  lipsync.rs  mod.rs  output_sink.rs  render.rs  render_thread.rs  runtime_gpu_budget.rs  tracking_lifecycle.rs
src/asset/: cache.rs  cloth_rebind.rs  mod.rs  vrm.rs
src/asset/vrm/: extensions.rs  gltf_decode.rs  metadata_tests.rs  mod.rs  mtoon.rs  v0.rs  v1.rs
src/avatar/: animation.rs  instance.rs  mod.rs  pose.rs  pose_solver.rs  retargeting.rs
src/editor/: cloth_authoring.rs  mod.rs
src/gui/: avatar_load.rs  calibration_modal.rs  folder_refresh_tests.rs  folder_watcher.rs  hotkey.rs  inspector.rs  mesh_picking.rs  mod.rs  mode_nav.rs  notifications.rs  profile.rs  project.rs  rebind_integration_tests.rs  snapshot.rs  status_bar.rs  theme.rs  thumbnail_failure_tests.rs  top_bar.rs  viewport.rs  viewport_overlay.rs
src/gui/calibration/: finalize.rs  mod.rs  panes.rs  pose_match.rs  refresh.rs  state.rs  target_pose.rs  transitions.rs
src/gui/components/: button.rs  card.rs  chip.rs  icon.rs  kv.rs  mod.rs
src/gui/inspector/: avatar.rs  cloth.rs  library.rs  mod.rs  output.rs  preview.rs  rendering.rs  settings.rs  tracking.rs
src/lipsync/: audio_capture.rs  mel.rs  mfcc.rs  mod.rs  profile.rs  viseme_inference.rs
src/output/: directshow_filter.rs  dshow_source.rs  frame_sink.rs  mf_virtual_camera.rs  mod.rs  shmem_security.rs  virtual_camera_native.rs
src/renderer/: background.rs  cloth_cache.rs  debug.rs  frame_input.rs  frame_pool.rs  gpu_handle.rs  gpu_wait.rs  material.rs  mod.rs  mtoon.rs  output_export.rs  pipeline.rs  pipeline_lint_tests.rs  pipeline_targets.rs  post_effects.rs  readback.rs  targets.rs  texture_cache.rs  thumbnail.rs  transform_cache.rs  upload.rs
src/renderer/pass/: depth_only.rs  forward.rs  mod.rs  outline.rs
src/simulation/: cloth.rs  cloth_gpu_boundary.rs  cloth_solver.rs  mod.rs  spring.rs
src/simulation/cloth_solver/: collision.rs  constraints.rs  integrator.rs  mod.rs  output.rs  tests.rs
src/tracking/: calibration.rs  cigpose_metric_depth.rs  face_expression.rs  face_mediapipe.rs  hand_mediapipe.rs  hmr2_provider.rs  inference.rs  mediapipe.rs  mod.rs  palm_detector.rs  pose_estimation.rs  provider.rs  ray_ik.rs  rtmw3d.rs  rtmw3d_with_depth.rs  skeleton_from_depth.rs  source_skeleton.rs  stagelog.rs  vitpose_provider.rs  vitpose_rtmw3d_hybrid.rs  vitpose_with_depth.rs  webcam.rs  yolox.rs
src/tracking/cigpose/: consts.rs  decode.rs  mod.rs  preprocess.rs
src/tracking/depth_anything/: consts.rs  mod.rs  preprocess.rs
src/tracking/hmr2/: mod.rs  preprocess.rs  smpl.rs
src/tracking/metric_depth/: consts.rs  decode.rs  mod.rs  preprocess.rs
src/tracking/rtmw3d/: annotation.rs  arm_ray_ik.rs  arm_z.rs  consts.rs  decode.rs  face.rs  math.rs  mod.rs  preprocess.rs  session.rs  skeleton.rs  wrist.rs  yolox_worker.rs
src/tracking/vitpose/: consts.rs  decode.rs  mod.rs  preprocess.rs
validation_images/: README.md
validation_images/calibration_effect_validation/: annotations.csv  composition_plan.md  subject_prompt.md
validation_images/gothic_lolita_chest_silhouette_variation/photorealistic_fixed_camera_high_skin/: annotations.csv
validation_images/hand_shoulder_occlusion/photorealistic_fixed_camera/: annotations.csv
validation_images/reiwa_idol_chest_silhouette_variation/photorealistic_fixed_camera/: annotations.csv
validation_images/reiwa_idol_chest_silhouette_variation/photorealistic_fixed_camera_frilly_idol/: annotations.csv
validation_images/reiwa_idol_chest_silhouette_variation/photorealistic_fixed_camera_high_skin/: annotations.csv
validation_images/reiwa_idol_webcam_capture/photorealistic_fixed_camera/: annotations.csv
validation_images/streamer_display_webcam_capture/: annotations.csv  composition_plan.md  subject_prompt.md
vulvatar-mf-camera/: Cargo.toml
vulvatar-mf-camera/src/: activate.rs  attributes.rs  class_factory.rs  lib.rs  media_source.rs  media_stream.rs  registry.rs  shared_memory.rs  trace.rs
