[workspace]
members = [".", "vulvatar-mf-camera"]

[package]
name = "vulvatar"
version = "0.1.0"
edition = "2021"
default-run = "vulvatar"

[lib]
name = "vulvatar_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["webcam", "lipsync", "rapier", "inference", "inference-gpu", "virtual-camera"]
webcam = ["nokhwa"]
rapier = ["rapier3d"]
inference = ["ort", "ndarray"]
# Routes ORT through the DirectML execution provider, falling back to
# CPU on EP registration failure. The whole project is Windows-only
# (MF Virtual Camera, vulkano on D3D12), and the pose model (RTMW3D-x,
# ~370 MB) is unusably slow on CPU — measured ~1 fps end-to-end —
# so DirectML is the only practical path and ships in default features.
inference-gpu = ["inference", "ort/directml"]
virtual-camera = []
lipsync = ["cpal", "rustfft"]

[dependencies]
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
rapier3d = { version = "0.22", optional = true }
eframe = "0.30"
egui_extras = { version = "0.30", features = ["image", "file"] }
gltf = { version = "1.4.1", features = ["import", "names", "extensions", "extras"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
sha2 = "0.11.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
bytemuck = { version = "1", features = ["derive"] }
vulkano = "0.35"
vulkano-shaders = "0.35"
ash = "0.38"
windows = { version = "0.58", features = [
    "Win32_Media",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
] }
notify = "7"
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17.2", optional = true }
cpal = { version = "0.17", optional = true }
rustfft = { version = "6.4", optional = true }
rust-i18n = "3"

# Dev builds: optimise crates that handle bulk pixel data so that
# 8 MB copies/uploads are not 40x slower than release.
# Only the crates that touch the hot path are listed here;
# shaderc-sys and other native-build crates stay at opt-level 0
# to reuse the existing build cache.
[profile.dev.package.vulvatar]
opt-level = 2
[profile.dev.package.egui]
opt-level = 2
[profile.dev.package.epaint]
opt-level = 2
[profile.dev.package.eframe]
opt-level = 2
[profile.dev.package.emath]
opt-level = 2
[profile.dev.package.egui-winit]
opt-level = 2
[profile.dev.package.egui_glow]
opt-level = 2
[profile.dev.package.glow]
opt-level = 2
